--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "chainlink-hardhat-box",
-  "version": "1.0.0",
+  "name": "YouTubeVideoNFTknz",
+  "version": "0.0.1",
   "description": "",
+  "license": "GPL-3.0-only",
+  "author": "https://rhizomik.net/~roberto",
+  "private": true,
   "scripts": {
-    "test": "hardhat test test/unit/PriceConsumerV3_unit_test.js --network hardhat && hardhat test test/unit/APIConsumer_unit_test.js --network hardhat && hardhat test test/unit/RandomNumberConsumer_unit_test.js --network hardhat && hardhat test test/unit/KeepersCounter_unit_test.js --network hardhat",
-    "test-integration": "hardhat test test/integration/APIConsumer_int_test.js --network kovan && hardhat test test/integration/RandomNumberConsumer_int_test.js --network kovan",
+    "network": "hardhat node --export-all src/contracts/contractInfo.json",
+    "frpc": "frpc -c frpc.ini",
+    "test": "hardhat test test/YTVideoNFT.test.js --network localhost",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "license": "MIT",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.3.3",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.4",
     "chai-bignumber": "^3.0.0",
     "chai-bn": "^0.2.1",
@@ -23,6 +28,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.7",
