Store NFT metadata using nft.storage and then mint NFT

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 REACT_APP_MORALIS_APPLICATION_ID = YOUR_APP_ID
 REACT_APP_MORALIS_SERVER_URL = https://YOUR_MORALIS_SERVER.usemoralis.com:2053/server
+REACT_APP_NFT_STORAGE = get one from https://nft.storage
 
 KOVAN_RPC_URL='https://kovan.infura.io/v3/1234567890'
 MUMBAI_RPC_URL='https://rpc-mumbai.maticvigil.com'
