--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "material-icons-react": "^1.0.4",
     "mocha-skip-if": "^0.0.3",
     "moralis": "^0.0.118",
+    "nft.storage": "^3.4.0",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
