--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.6.6",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "babel-eslint": "^10.1.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
